Fix steps on smaller screens

--- a/airbitz/airbitz/static/less/page-content.less
+++ b/airbitz/airbitz/static/less/page-content.less
@@ -135,6 +135,11 @@ body {
         line-height: 30px;
         text-align: center;
         box-shadow: 0 5px #555;
+
+        @media(max-width: @screen-sm) {
+            margin: 0 auto;
+            margin-bottom: 30px;
+        }
     }
 
     .feature-section {
